--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ version = "0.0.0"
 authors = [ "Jonathan S <gereeter@gmail.com>" ]
 
 [dependencies]
-image = "~0.2.0"
-rand = "0.2.0"
+image = "0.3.0"
+rand = "0.3.0"
+num_cpus = "0.1.0"
 
 [[bin]]
 
